apps/pihole/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole
spec:
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.1.9
  ports:
    - port: 53
      protocol: UDP
  selector:
    app: pihole
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-tcp
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole
spec:
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.1.9
  ports:
    - port: 53
      protocol: TCP
  selector:
    app: pihole
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-admin
spec:
  loadBalancerIP: 192.168.1.10
  ports:
    - port: 80
  selector:
    app: pihole
  type: LoadBalancer
