apps/pihole/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pihole
spec:
  tls:
    - hosts:
        - pihole.hubbe.club
  rules:
    - host: pihole.hubbe.club
      http:
        paths:
          - path: /
            backend:
              serviceName: pihole-admin
              servicePort: 80
